adjust image app details

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="about">
             <div class="container">
                 <h3>About Me</h3>
-                <p>I'm a data engineer & visualization specialist building scalable data infrastructure and extracting meaningful insights from complex datasets. I specialize in ETL pipelines, data warehousing, and creating tools that make data accessible to teams.</p>
+                <p>I'm a data engineer & visualization specialist building scalable data infrastructure and extracting meaningful insights from complex datasets. I specialize in ETL pipelines, data warehousing, hybrid OLTP/OLAP databases, data visualization and creating tools that make data accessible to teams.</p>
                 <p>Read more here: <a href="https://jessejruiz.com/">https://jessejruiz.com/</a></p>
             </div>
         </section>
