--- a/projects/index.html
+++ b/projects/index.html
@@ -312,7 +312,7 @@
                     </div>
                     <div class="project-actions">
                         <a href="li_image_app.html" class="btn-primary">Try the App</a>
-                        <a href="#" class="btn-secondary">View Code</a>
+                        <a href="https://github.com/jessejinnaruiz/jessejinnaruiz.github.io/blob/main/projects/li_image_app.html" class="btn-secondary">View Code</a>
                     </div>
                 </div>
                 
