--- a/projects/li_image_app.html
+++ b/projects/li_image_app.html
@@ -120,8 +120,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Profile Photo Text Overlay</h1>
-        
+        <h1>LinkedIn Profile Pic Callout Web App</h1>
+        <p>An interactive web app allowing users to create their own profile picture with custom call out text.</p>
+        <p>Author: Jesse J Ruiz</p>
+        <p>GitHub: <a href="https://github.com/jessejinnaruiz" target="_blank">https://github.com/jessejinnaruiz</a></p>
+        <p> LinkedIn: <a href="https://www.linkedin.com/in/jesse-jinna-ruiz/" target="_blank">https://www.linkedin.com/in/jesse-jinna-ruiz/</a></p>
+        <p></p><br>
         <div class="upload-section">
             <div class="file-input-wrapper">
                 <input type="file" id="imageInput" class="file-input" accept="image/*">
