--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="hero">
             <div class="container">
                 <h4>Building Data Pipelines & Insights</h4>
-                <p>Austin, TX | Artist, Queer, Data Nerd</p>
+                <p>Austin, TX</p>
                 <a href="#featured" class="cta-button">View My Work</a>
             </div>
         </section>
