added dog seizure app

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 <h3>Featured Work</h3>
                 <div class="featured-grid">
                     <div class="featured-item">
+                        <h4>Dog Seizure Tracking App</h4>
+                        <p>A web application for tracking and analyzing canine seizure episodes.</p>
+                        <a href="https://jessejinnaruiz.github.io/proj_dog_seizure_tracking_app/" class="btn">View App</a>
+                        <a href="https://github.com/jessejinnaruiz/proj_dog_seizure_tracking_app" class="btn">View Code</a>
+                    </div>
+                    <div class="featured-item">
                         <h4>Austin Displacement Risk Visualization</h4>
                         <p>A data-driven exploration of displacement patterns in Austin.</p>
                         <a href="visualizations/visualization.html" class="btn">View Visualization</a>
