--- a/projects/index.html
+++ b/projects/index.html
@@ -296,7 +296,27 @@
                 <p>A collection of data science projects, web applications, and technical solutions I've built</p>
             </section>
             
-            <div class="projects-grid">
+            <div class="projects-grid" id="projects">
+                <div class="project-card">
+                    <div class="project-type">Web Application</div>
+                    <h2>Dog Seizure Tracking App</h2>
+                    <div class="project-description">
+                        <p>A full-stack web application for tracking and analyzing canine seizure episodes with data visualization capabilities.</p>
+                        <p>Includes user authentication, data entry forms, analytics dashboard, and export functionality.</p>
+                    </div>
+                    <div class="project-tech">
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">HTML/CSS</span>
+                        <span class="tech-tag">Chart.js</span>
+                        <span class="tech-tag">Local Storage</span>
+                        <span class="tech-tag">Responsive Design</span>
+                    </div>
+                    <div class="project-actions">
+                        <a href="https://jessejinnaruiz.github.io/proj_dog_seizure_tracking_app/" class="btn-primary">View App</a>
+                        <a href="https://github.com/jessejinnaruiz/proj_dog_seizure_tracking_app" class="btn-secondary">View Code</a>
+                    </div>
+                </div>
+                
                 <div class="project-card">
                     <div class="interactive-badge">Interactive</div>
                     <div class="project-type">Web Application</div>
